lib/flux/apps/servarr/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: romm
    app.kubernetes.io/instance: romm
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
